--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
             <div class="div_b">
-                <p class="info">current number</p>
+                <p class="info">hi yoyo</p>
                 <p class="num">112</p>  
             </div>
             
@@ -22,3 +22,4 @@
     </body>
 
 </html>
+
