Update text in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             <div class="div_b">
                 <p class="info">hi yoyo</p>
-                <p class="num">112</p>  
+                <p class="num">ro7 nam</p>  
             </div>
             
         </div>
@@ -22,4 +22,5 @@
     </body>
 
 </html>
+
 
