--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Title</title>
+    <title>calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -38,3 +38,4 @@
 </body>
 
 </html>
+
