Fix multiplication operator in calculator HTML

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="keys">
             <button onclick="putondisplay('+')"class="opp">+</button>
             <button onclick="putondisplay('-')"class="opp">-</button>
-            <button onclick="putondisplay('x')"class="opp">x</button>
+            <button onclick="putondisplay('*')"class="opp">*</button>
             <button onclick="putondisplay('/')"class="opp">/</button>
             <button onclick="putondisplay('1')">1</button>
             <button onclick="putondisplay('2')">2</button>
@@ -38,4 +38,5 @@
 </body>
 
 </html>
+
 
